# linux_sockets

client/: CMakeLists.txt  main.cpp
client/client/: CMakeLists.txt  client.cpp  client.h
client_sockets_linux/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
server_sock_example/: CMakeLists.txt  CMakeSettings.json
server_sock_example/sock_example/: CMakeLists.txt  sock_example.cpp  sock_example.h
server_sockets_linux/: CMakeLists.txt  main.cpp
